force-app/main/default/objects/Delivery_Object__c/Delivery_Object__c.object-meta.xml
<CustomObject>
    <label>Delivery Object</label>
    <nameField>
        <label>Delivery Object  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries Object</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>