force-app/main/default/objects/Delivery_Object__c/fields/Account_Responded__c.field-meta.xml
<CustomField>
    <fullName>Account_Responded__c</fullName>
    <formula>NOT( ISBLANK( User_Address__r.Respond_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Responded</label>
    <type>Checkbox</type>
</CustomField>