force-app/main/default/objects/Delivery_Object__c/fields/Activation_Object_Created__c.field-meta.xml
<CustomField>
    <fullName>Activation_Object_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Object Created</label>
    <type>Checkbox</type>
</CustomField>