force-app/main/default/objects/Delivery_Object__c/fields/Additional_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Additional_Delivery__c</fullName>
    <label>Additional Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DirCode-012881 Tampa, FL</fullName>
            </value>
            <value>
                <fullName>DirCode-018887	CHICAGO, IL</fullName>
            </value>
            <value>
                <fullName>Nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>