force-app/main/default/objects/Delivery_Object__c/fields/Arrival_Dist_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Dist_From_Customer__c</fullName>
    <label>Arrival Dist From Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>