force-app/main/default/objects/Delivery_Object__c/fields/Arrival_Location_Error__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Location_Error__c</fullName>
    <label>Arrival Location Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>