force-app/main/default/objects/Delivery_Object__c/fields/Arrival_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Longitude__c</fullName>
    <label>Arrival Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>