force-app/main/default/objects/Delivery_Object__c/fields/Arrival_Speed__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Speed__c</fullName>
    <label>Arrival Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>