force-app/main/default/objects/Delivery_Object__c/fields/Assigned_Route__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned Route</label>
    <type>Checkbox</type>
</CustomField>