force-app/main/default/objects/Delivery_Object__c/fields/Aws_Url__c.field-meta.xml
<CustomField>
    <fullName>Aws_Url__c</fullName>
    <label>Aws Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>