force-app/main/default/objects/Delivery_Object__c/fields/Branch_Object__c.field-meta.xml
<CustomField>
    <fullName>Branch_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Object</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Deliveries Object</relationshipLabel>
    <relationshipName>Deliveries_Object</relationshipName>
    <type>Lookup</type>
</CustomField>