force-app/main/default/objects/Delivery_Object__c/fields/Branch_Stage__c.field-meta.xml
<CustomField>
    <fullName>Branch_Stage__c</fullName>
    <formula>TEXT( Branch_Object__r.Branch_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Stage</label>
    <type>Text</type>
</CustomField>