force-app/main/default/objects/Delivery_Object__c/fields/Carrier_ID__c.field-meta.xml
<CustomField>
    <fullName>Carrier_ID__c</fullName>
    <formula>LEFT( User_Address__r.Address__r.Zip_Code__c , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier ID</label>
    <type>Text</type>
</CustomField>