force-app/main/default/objects/Delivery_Object__c/fields/Cheetah_Driver_Code__c.field-meta.xml
<CustomField>
    <fullName>Cheetah_Driver_Code__c</fullName>
    <externalId>true</externalId>
    <label>Cheetah Driver Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>