force-app/main/default/objects/Delivery_Object__c/fields/Customer_Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lattitude__c</fullName>
    <label>Customer Lattitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>