force-app/main/default/objects/Delivery_Object__c/fields/Customer_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Customer_Longitude__c</fullName>
    <label>Customer Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>