force-app/main/default/objects/Delivery_Object__c/fields/Deliver_Code__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Code__c</fullName>
    <formula>User_Address__r.Confirmation_Number__c +&apos;H&apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deliver Code</label>
    <type>Text</type>
</CustomField>