force-app/main/default/objects/Delivery_Object__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <defaultValue>0</defaultValue>
    <externalId>true</externalId>
    <label># Delivered</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>