force-app/main/default/objects/Delivery_Object__c/fields/Delivered_x_days_after_recording__c.field-meta.xml
<CustomField>
    <fullName>Delivered_x_days_after_recording__c</fullName>
    <formula>IF( AND(DATEVALUE( User_Address__r.CreatedDate ) - User_Address__r.Recording_Date__c &lt; 21 , NOT( ISBLANK( User_Address__r.Recording_Date__c )), ISPICKVAL( Hung_Status__c , &quot;Hung&quot;),NOT( ISBLANK( Delivery_Date__c ))) , DATEVALUE(Delivery_Date__c) - User_Address__r.Recording_Date__c , NULL)</formula>
    <label>Delivered x days after recording</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>