force-app/main/default/objects/Delivery_Object__c/fields/Delivery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Completed__c</fullName>
    <description>Used to distinguish between delivered and non delivered hang Status</description>
    <formula>IF( ISPICKVAL( Hung_Status__c , &quot;Hung&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Completed</label>
    <type>Checkbox</type>
</CustomField>