force-app/main/default/objects/Delivery_Object__c/fields/Delivery_Cost__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Cost__c</fullName>
    <formula>IF ( ISPICKVAL(Hung_Status__c, &quot;Hung&quot;),
  IF ( AND(Name = &quot;1&quot;, ISBLANK( Scan_Code__c )) ,2.50,5),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>