force-app/main/default/objects/Delivery_Object__c/fields/Delivery_File__c.field-meta.xml
<CustomField>
    <fullName>Delivery_File__c</fullName>
    <label>Delivery File</label>
    <type>Url</type>
</CustomField>