force-app/main/default/objects/Delivery_Object__c/fields/Delivery_File_Out__c.field-meta.xml
<CustomField>
    <fullName>Delivery_File_Out__c</fullName>
    <label>Delivery File Out</label>
    <length>100</length>
    <type>Text</type>
</CustomField>