force-app/main/default/objects/Delivery_Object__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <label>Delivery Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>