force-app/main/default/objects/Delivery_Object__c/fields/Delivery_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify current delivery parameter for the delivery.</description>
    <label>Delivery Parameter</label>
    <referenceTo>Delivery_Parameter__c</referenceTo>
    <relationshipLabel>Deliveries Object</relationshipLabel>
    <relationshipName>Deliveries_Object</relationshipName>
    <type>Lookup</type>
</CustomField>