force-app/main/default/objects/Delivery_Object__c/fields/Dex_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Dex_Delivery__c</fullName>
    <formula>IF(  OR( INCLUDES( Additional_Delivery__c  , &quot;DirCode-012881 Tampa, FL&quot;), INCLUDES( Additional_Delivery__c  , &quot;DirCode-018887	CHICAGO, IL&quot;)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dex Delivery</label>
    <type>Checkbox</type>
</CustomField>