force-app/main/default/objects/Delivery_Object__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Deliveries Object</relationshipLabel>
    <relationshipName>Deliveries_Object</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>