force-app/main/default/objects/Delivery_Object__c/fields/Driver_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Driver_Lead_Status__c</fullName>
    <label>Driver Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>