force-app/main/default/objects/Delivery_Object__c/fields/fAcc_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>fAcc_Created_Date__c</fullName>
    <formula>User_Address__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAcc Created Date</label>
    <type>Date</type>
</CustomField>