force-app/main/default/objects/Delivery_Object__c/fields/fAcc_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>fAcc_Sale_Date__c</fullName>
    <formula>User_Address__r.Sale_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAcc Sale Date</label>
    <type>Date</type>
</CustomField>