force-app/main/default/objects/Delivery_Object__c/fields/fAddress_Street_1__c.field-meta.xml
<CustomField>
    <fullName>fAddress_Street_1__c</fullName>
    <description>This field used to hold the Account primary shipping street</description>
    <formula>User_Address__r.Address__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAddress Street 1</label>
    <type>Text</type>
</CustomField>