force-app/main/default/objects/Delivery_Object__c/fields/fBranch__c.field-meta.xml
<CustomField>
    <fullName>fBranch__c</fullName>
    <formula>User_Address__r.Address__r.Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBranch</label>
    <type>Text</type>
</CustomField>