force-app/main/default/objects/Delivery_Object__c/fields/fCity__c.field-meta.xml
<CustomField>
    <fullName>fCity__c</fullName>
    <description>This field will store Account primary city</description>
    <formula>User_Address__r.Address__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCity</label>
    <type>Text</type>
</CustomField>