force-app/main/default/objects/Delivery_Object__c/fields/fCounty__c.field-meta.xml
<CustomField>
    <fullName>fCounty__c</fullName>
    <formula>User_Address__r.Address__r.County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCounty</label>
    <type>Text</type>
</CustomField>