force-app/main/default/objects/Delivery_Object__c/fields/fDelivery_Date_1__c.field-meta.xml
<CustomField>
    <fullName>fDelivery_Date_1__c</fullName>
    <description>Used for reporting only.</description>
    <formula>Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for reporting only.</inlineHelpText>
    <label>fDelivery Date_1</label>
    <type>Date</type>
</CustomField>