force-app/main/default/objects/Delivery_Object__c/fields/fDelivery_Image__c.field-meta.xml
<CustomField>
    <fullName>fDelivery_Image__c</fullName>
    <description>The base URL in the External url setting is combined with the picture URL resides in the picture__c field</description>
    <formula>IF(ISBLANK(Picture__c),&apos;&apos;,
IF(CONTAINS(Picture__c,&apos;/jpg/&apos;), HYPERLINK($Setup.Delivery_BaseURL_Setting__c.Base_Url__c+ &apos;/user/&apos;+fLead_Id__c +&apos;/delivery/&apos;+ Name +&apos;/&apos;+RIGHT (Picture__c, LEN(Picture__c)-(FIND(&quot;/jpg/&quot;,Picture__c)+4)),RIGHT (Picture__c, LEN(Picture__c)-(FIND(&quot;/jpg/&quot;,Picture__c)+4))),
IF(CONTAINS(Picture__c,&apos;/&apos;),$Setup.Delivery_BaseURL_Setting__c.Base_Url__c +&apos;/user/&apos;+ RIGHT (Picture__c, LEN(Picture__c)-FIND(&quot;/&quot;,Picture__c)),
HYPERLINK($Setup.Delivery_BaseURL_Setting__c.Base_Url__c+&apos;/user/&apos;+ fLead_Id__c +&apos;/delivery/&apos;+ Name +&apos;/&apos;+Picture__c,Picture__c)
)
)
)</formula>
    <label>fDelivery Image</label>
    <type>Text</type>
</CustomField>