force-app/main/default/objects/Delivery_Object__c/fields/fDelivery_XML_Out__c.field-meta.xml
<CustomField>
    <fullName>fDelivery_XML_Out__c</fullName>
    <formula>IF(ISBLANK(Delivery_File_Out__c),&apos;&apos;, 
HYPERLINK($Setup.Delivery_BaseURL_Setting__c.Base_Url__c+ &apos;/user/&apos;+fLead_Id__c +&apos;/delivery/&apos;+ Name+&apos;/&apos;+Delivery_File_Out__c,Delivery_File_Out__c)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDelivery XML Out</label>
    <type>Text</type>
</CustomField>