force-app/main/default/objects/Delivery_Object__c/fields/fDriver_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>fDriver_Lead_Status__c</fullName>
    <formula>CASE( Name , 
  &quot;1&quot;, IF( AND( Person_Account__r.Delivery_Count__c  = 1,  NOT( ISBLANK(Person_Account__r.Respond_Date__c       ))) , &quot;Data&quot;, &quot;&quot;),
  &quot;2&quot;, IF( AND( Person_Account__r.Delivery_Count__c  = 2,  NOT( ISBLANK(Person_Account__r.Respond_Date__c       ))) , &quot;Data&quot;, &quot;&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDriver Lead Status</label>
    <type>Text</type>
</CustomField>