force-app/main/default/objects/Delivery_Object__c/fields/fFirst_Name__c.field-meta.xml
<CustomField>
    <fullName>fFirst_Name__c</fullName>
    <description>This formula field is used to hold the Account first name.</description>
    <formula>User_Address__r.UserAccount__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fFirst Name</label>
    <type>Text</type>
</CustomField>