force-app/main/default/objects/Delivery_Object__c/fields/fGeocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>fGeocode_Accuracy__c</fullName>
    <formula>Text( Geocode_Accuracy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fGeocode Accuracy</label>
    <type>Text</type>
</CustomField>