force-app/main/default/objects/Delivery_Object__c/fields/fLast_Name__c.field-meta.xml
<CustomField>
    <fullName>fLast_Name__c</fullName>
    <description>This field will hold the Account last name</description>
    <formula>User_Address__r.UserAccount__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fLast Name</label>
    <type>Text</type>
</CustomField>