force-app/main/default/objects/Delivery_Object__c/fields/fLead_Id__c.field-meta.xml
<CustomField>
    <fullName>fLead_Id__c</fullName>
    <description>This filed will store Account Lead Id</description>
    <formula>User_Address__r.Confirmation_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fLead Id</label>
    <type>Text</type>
</CustomField>