force-app/main/default/objects/Delivery_Object__c/fields/fMiddle_Name__c.field-meta.xml
<CustomField>
    <fullName>fMiddle_Name__c</fullName>
    <description>This field will store Account middle name</description>
    <formula>User_Address__r.UserAccount__r.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fMiddle Name</label>
    <type>Text</type>
</CustomField>