force-app/main/default/objects/Delivery_Object__c/fields/fName_Last_First__c.field-meta.xml
<CustomField>
    <fullName>fName_Last_First__c</fullName>
    <formula>User_Address__r.UserAccount__r.LastName + &apos;, &apos; + User_Address__r.UserAccount__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fName Last, First</label>
    <type>Text</type>
</CustomField>