force-app/main/default/objects/Delivery_Object__c/fields/Formula_Scan_Code__c.field-meta.xml
<CustomField>
    <fullName>Formula_Scan_Code__c</fullName>
    <formula>LEFT(Scan_Code__c, 9) &amp; &quot; &quot; &amp; &quot;0000&quot; &amp; &quot; &quot; &amp; &quot;0000&quot;</formula>
    <label>Formula Scan Code</label>
    <type>Text</type>
</CustomField>