force-app/main/default/objects/Delivery_Object__c/fields/fRegion__c.field-meta.xml
<CustomField>
    <fullName>fRegion__c</fullName>
    <formula>Branch_Object__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fRegion</label>
    <type>Text</type>
</CustomField>