force-app/main/default/objects/Delivery_Object__c/fields/fSales_Price__c.field-meta.xml
<CustomField>
    <fullName>fSales_Price__c</fullName>
    <formula>User_Address__r.Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fSales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>