force-app/main/default/objects/Delivery_Object__c/fields/fService_Name__c.field-meta.xml
<CustomField>
    <fullName>fService_Name__c</fullName>
    <description>This value hold the Service name value which needs to be pushed to Cheetah</description>
    <formula>&apos;Welcome Package Delivery&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fService_Name</label>
    <type>Text</type>
</CustomField>