force-app/main/default/objects/Delivery_Object__c/fields/fState__c.field-meta.xml
<CustomField>
    <fullName>fState__c</fullName>
    <description>This field will store Account primary State</description>
    <formula>Text(User_Address__r.Address__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fState</label>
    <type>Text</type>
</CustomField>