force-app/main/default/objects/Delivery_Object__c/fields/fUser_Address_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>fUser_Address_Created_Date__c</fullName>
    <formula>User_Address__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fUser Address Created Date</label>
    <type>DateTime</type>
</CustomField>