force-app/main/default/objects/Delivery_Object__c/fields/fZip__c.field-meta.xml
<CustomField>
    <fullName>fZip__c</fullName>
    <description>This filed will store the Account primary zip</description>
    <formula>User_Address__r.Address__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fZip</label>
    <type>Text</type>
</CustomField>