force-app/main/default/objects/Delivery_Object__c/fields/Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Accuracy__c</fullName>
    <label>Geocode Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>