force-app/main/default/objects/Delivery_Object__c/fields/Geocode_Accuracy_F__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Accuracy_F__c</fullName>
    <formula>IF(TEXT(Person_Account__r.Geocode_Accuracy__c) != &apos;Address&apos;, &apos;Z&apos;,  TEXT(Person_Account__r.Geocode_Accuracy__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geocode Accuracy F</label>
    <type>Text</type>
</CustomField>