force-app/main/default/objects/Delivery_Object__c/fields/Hang__c.field-meta.xml
<CustomField>
    <fullName>Hang__c</fullName>
    <formula>IF( Name = &quot;1&quot; , 1,  0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hang #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>