force-app/main/default/objects/Delivery_Object__c/fields/Homeowner__c.field-meta.xml
<CustomField>
    <fullName>Homeowner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeowner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deliveries Object</relationshipLabel>
    <relationshipName>Deliveries_Object</relationshipName>
    <type>Lookup</type>
</CustomField>