force-app/main/default/objects/Delivery_Object__c/fields/Hung_DateTieme__c.field-meta.xml
<CustomField>
    <fullName>Hung_DateTieme__c</fullName>
    <label>Hung Status Updated Date</label>
    <type>DateTime</type>
</CustomField>