force-app/main/default/objects/Delivery_Object__c/fields/Hung_Gated__c.field-meta.xml
<CustomField>
    <fullName>Hung_Gated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hung: Gated</label>
    <type>Checkbox</type>
</CustomField>