force-app/main/default/objects/Delivery_Object__c/fields/Hung_Status__c.field-meta.xml
<CustomField>
    <fullName>Hung_Status__c</fullName>
    <label>Hung Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrived</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Hung</fullName>
            </value>
            <value>
                <fullName>COMPLETED GATED</fullName>
            </value>
            <value>
                <fullName>Gated</fullName>
            </value>
            <value>
                <fullName>Cant Find</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Invld</fullName>
            </value>
            <value>
                <fullName>Remove: Management</fullName>
            </value>
            <value>
                <fullName>Too Far</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Wrong House Number</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Remove: Gated</fullName>
            </value>
            <value>
                <fullName>Remove: Aging</fullName>
            </value>
            <value>
                <fullName>Sent To Cheetah</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Gio - In Process</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Access Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>