force-app/main/default/objects/Delivery_Object__c/fields/IsRecent__c.field-meta.xml
<CustomField>
    <fullName>IsRecent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed used to identify the recently created Delivery Object record.</description>
    <label>IsRecent</label>
    <type>Checkbox</type>
</CustomField>