force-app/main/default/objects/Delivery_Object__c/fields/Location_updated_by__c.field-meta.xml
<CustomField>
    <fullName>Location_updated_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location updated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliveries_Object</relationshipName>
    <type>Lookup</type>
</CustomField>