force-app/main/default/objects/Delivery_Object__c/fields/No_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attempts__c</fullName>
    <description>This field is used to store the number of attempts the Delivery Object record is  created for an Account</description>
    <label>Attempt Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>