force-app/main/default/objects/Delivery_Object__c/fields/Parent_Gift_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Gift_Card_Order__c</fullName>
    <label>Parent Gift Card Order</label>
    <referenceTo>Gift_Card_Orders__c</referenceTo>
    <relationshipLabel>Deliveries Object</relationshipLabel>
    <relationshipName>Deliveries_Object</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>