force-app/main/default/objects/Delivery_Object__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries Object</relationshipLabel>
    <relationshipName>Deliveries_Object</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>