force-app/main/default/objects/Delivery_Object__c/fields/Picture_in_Cheetah__c.field-meta.xml
<CustomField>
    <fullName>Picture_in_Cheetah__c</fullName>
    <label>Picture in Cheetah</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>