force-app/main/default/objects/Delivery_Object__c/fields/Previous_Value_Hung_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value_Hung_Status__c</fullName>
    <label>Previous Value: Hung Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>