force-app/main/default/objects/Delivery_Object__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <description>It contains products list for the delivery in a JSON format.</description>
    <label>Product Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>