force-app/main/default/objects/Delivery_Object__c/fields/QC_Status__c.field-meta.xml
<CustomField>
    <fullName>QC_Status__c</fullName>
    <label>QC Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dashboard Picture</fullName>
            </value>
            <value>
                <fullName>Hand Delivery</fullName>
            </value>
            <value>
                <fullName>No Box</fullName>
            </value>
            <value>
                <fullName>No Picture</fullName>
            </value>
            <value>
                <fullName>No Separation(Tag &amp; Box)</fullName>
            </value>
            <value>
                <fullName>No Tag</fullName>
            </value>
            <value>
                <fullName>Picture Correct</fullName>
            </value>
            <value>
                <fullName>Picture wrong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>