force-app/main/default/objects/Delivery_Object__c/fields/Remove_from_Cheetah__c.field-meta.xml
<CustomField>
    <fullName>Remove_from_Cheetah__c</fullName>
    <formula>IF( OR(AND(Name =&apos;1&apos;,
      DATEVALUE( User_Address__r.CreatedDate ) &gt; Today()-30 ,
      ISPICKVAL( Hung_Status__c , &apos;Sent To Cheetah&apos;)),
    AND(Name =&apos;2&apos;,
      DATEVALUE( User_Address__r.CreatedDate ) &gt; Today()-45 ,
      ISPICKVAL( Hung_Status__c , &apos;Sent To Cheetah&apos;))),
  False, 
True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remove from Cheetah</label>
    <type>Checkbox</type>
</CustomField>