force-app/main/default/objects/Delivery_Object__c/fields/Report_Picture__c.field-meta.xml
<CustomField>
    <fullName>Report_Picture__c</fullName>
    <formula>Hyperlink(IF(ISBLANK(Picture__c),&apos;&apos;,
IF(CONTAINS(Picture__c,&apos;/jpg/&apos;), &apos;https://files.nuhome.com&apos;+ &apos;/user/&apos;+fLead_Id__c +&apos;/delivery/&apos;+ Name +&apos;/&apos;+RIGHT (Picture__c, LEN(Picture__c)-(FIND(&quot;/jpg/&quot;,Picture__c)+4)),
IF(CONTAINS(Picture__c,&apos;/&apos;), &apos;https://files.nuhome.com&apos;+&apos;/user/&apos;+ RIGHT (Picture__c, LEN(Picture__c)-FIND(&quot;/&quot;,Picture__c)),
&apos;https://files.nuhome.com&apos;+&apos;/user/&apos;+ fLead_Id__c +&apos;/delivery/&apos;+ Name +&apos;/&apos;+Picture__c+&apos;&apos;
)
)
),&apos;Picture&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Picture</label>
    <type>Text</type>
</CustomField>