force-app/main/default/objects/Delivery_Object__c/fields/Scan_Code__c.field-meta.xml
<CustomField>
    <fullName>Scan_Code__c</fullName>
    <label>Scan Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>