force-app/main/default/objects/Delivery_Object__c/fields/Scan_Code_Length__c.field-meta.xml
<CustomField>
    <fullName>Scan_Code_Length__c</fullName>
    <formula>LEN( Scan_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scan Code Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>