force-app/main/default/objects/Delivery_Object__c/fields/Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated_Date__c</fullName>
    <description>This filed will capture the date in which the status is get updated by Cheetha</description>
    <label>Status Updated Date</label>
    <type>Date</type>
</CustomField>